src/test/ui/parser/keyword-let-as-identifier.stderr
error: expected identifier, found keyword `let`
  --> $DIR/keyword-let-as-identifier.rs:4:9
   |
LL |     let let = "foo";
   |         ^^^ expected identifier, found keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL |     let r#let = "foo";
   |         ^^^^^

error: aborting due to previous error

